[Fix] Enforce white background for popovers with QR code
Popovers in light theme have black background, which makes the QR
codes in them unreadable by apps. This fix makes sure white
background is used in popovers with QR codes regardless of theme.

--- a/src/common/CopyableLongText.scss
+++ b/src/common/CopyableLongText.scss
@@ -14,3 +14,14 @@
     }
   }
 }
+
+.Luna .qr-code-popover.ant-popover > .ant-popover-content {
+  .ant-popover-inner-content {
+    background-color: #fff;
+  }
+
+  .ant-popover-arrow {
+    border-color: #fff;
+    background-color: #fff;
+  }
+}
